<resources>
    <string name="app_name">Burguer Review</string>
    <string name="hint_login_user">User name</string>
    <string name="hint_login_password">Password</string>
    <string name="bt_login_acess">Login</string>
    <string name="label_user">User:</string>
    <string name="menu_register">Register</string>
    <string name="menu_review">Reviews</string>
    <string name="menu_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="register_name">Name</string>
    <string name="hint_register_name">Name of Hamburger house</string>
    <string name="register_adress">Adress</string>
    <string name="hint_register_adress">Hamburger House location</string>
    <string name="register_strong_point">Strong point</string>
    <string name="hint_register_strong_point">Hamburger House strong point</string>
    <string name="register_weak_point">Weak point</string>
    <string name="register_snack_note">Snack note</string>
    <string name="hint_register_snack_note">Did you like snack? ( 0-10)</string>
    <string name="hint_register_weak_point">Hamburger House weak point</string>
    <string name="register_sider_note">Sider note</string>
    <string name="hint_register_sider_note">Did you like siders? (0-10)</string>
    <string name="register_ambient_note">Ambient note</string>
    <string name="hint_register_ambient_note">Did you like ambient? (0-10)</string>
    <string name="register_price_range">Price range</string>
    <string name="hint_register_price_range">About price range. (0-10)</string>
    <string name="register_notes">Additional Note</string>
    <string name="hint_notes">Tell us more </string>
    <string name="bt_register_add">Register</string>
    <string name="bt_register_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_exit">Exit</string>
    <string name="developedby">This application was developed by Antonio Carlos Baldacin Garçon</string>
    <string name="version">Version 1.0.0</string>
</resources>
