<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        tools:context="br.com.fiap.sub.burguerreview.Login">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login_user"
            android:id="@+id/ed_login_user"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20sp"
            android:padding="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:hint="@string/hint_login_password"
            android:id="@+id/ed_login_password"
            android:textColor="@color/colorSecondaryText"
            android:padding="8dp"/>

        <CheckBox
            android:text="CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ck_login"
            android:padding="8dp"/>

        <Button
            android:text="@string/bt_login_acess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login_acess"
            android:onClick="login"/>
</LinearLayout>
</ScrollView>