<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <ImageView
        android:layout_width="@dimen/itemSize"
        android:layout_height="@dimen/itemSize"
        android:layout_weight="3"
        android:id="@+id/item_img"
        android:src="@drawable/android_profile"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical"
        android:textAlignment="textEnd"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_itens"
            android:weightSum="5"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register_name"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_itens"
                android:layout_weight="4"
                android:id="@+id/item_name"
                android:textAlignment="textEnd"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_itens"
                android:text="@string/register_snack_note"
                />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_itens"
                android:id="@+id/rb_snack_note"
                android:numStars="5"
                android:clickable="false"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_itens"
                android:text="@string/register_ambient_note"
                />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_itens"
                android:id="@+id/rb_ambient_note"
                android:numStars="5"
                android:clickable="false"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/row_itens"
                    android:text="@string/register_price_range"
                    />
                <RatingBar
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/row_itens"
                    android:id="@+id/rb_price_range"
                    android:numStars="5"
                    android:clickable="false"
                    android:layout_alignParentRight="true"
                    />
        </RelativeLayout>



    </LinearLayout>



</LinearLayout>